[package]
name = "looper_heavy"
version = "1.0.0"
edition = "2021"
description = "Heavy to compile stuff for looper"

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.18", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
