[package]
name = "girvel_looper"
version = "1.0.1"
authors = ["girvel"]
edition = "2021"
readme = "../README.md"
license-file = "../LICENSE"
description = "personal task manager for reoccuring tasks"
repository = "https://github.com/girvel/looper"
keywords = ["cli"]
categories = ["command-line-utilities", "accessibility"]

[dependencies]
looper_heavy = { path = "../heavy", version = "1.0.0" }
cron = "0.12"
chrono = "0.4"
colored = "2.1"

[[bin]]
name = "looper"
path = "src/main.rs"
